tests/NormalTests/paczka1/fuzzy1/90894410.err
Error in line 3: APFgi6 S957 82,0
Error in line 26: JbRZ S957 20,19
Error in line 27: CIh A755 66,1
Error in line 23: APFgi6 A642 0,2
